@startuml

title __GAME's Class Diagram__\n


    namespace t.jku.werewolf.io {
      namespace game {
        class at.jku.werewolf.io.game.CalculateResults {
            {static} + calculateResults()
        }
      }
    }

  


    namespace t.jku.werewolf.io {
      namespace game {
        class at.jku.werewolf.io.game.GameResult {
            ~ isOver : boolean
            + GameResult()
            + GameResult()
        }
      }

  }
  


    namespace t.jku.werewolf.io {
      namespace game {
        class at.jku.werewolf.io.game.VotingController {
            ~ countVotes : int
            - simpMessagingTemplate : SimpMessagingTemplate
            + VotingController()
            + checkForWin()
            + countPlayerVote()
            + countTotalVote()
            + countWerewolfVote()
            + votePlayer()
            - denMitGrößtemCountAufTotSetzen()
        }
      }
    }

  

  at.jku.werewolf.io.game.GameResult o-- at.jku.werewolf.io.lobbymanagement.GameRole : hasWon
  at.jku.werewolf.io.game.VotingController o-- at.jku.werewolf.io.lobbymanagement.LobbyRepository : repo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
